--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.1.1'
+    id 'io.spring.dependency-management' version '1.1.0'
+}
+
+java {
+    sourceCompatibility = '17'
 }
 
 group 'org.example'
@@ -10,8 +16,32 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+
+    implementation 'org.modelmapper:modelmapper:3.1.1'
+
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.postgresql:postgresql:42.6.0'
+    implementation 'junit:junit:4.13.1'
+    implementation 'junit:junit:4.13.1'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'com.openpojo:openpojo:0.9.1'
+    testImplementation'org.mockito:mockito-core:5.2.0'
+}
+
+springBoot {
+    mainClass = 'com.example.userservice.UserServiceApp'
 }
 
 test {
